tests/cmp/multi-error-recovery.trp
(* Test with semicolon separation - similar to Happy test *)
1 + ; 2 + ; 3
